@@ -1,5 +1,12 @@
 2012-11-27  Roland McGrath  <mcgrathr@google.com>
 
+	* ld-elf/compress.exp: Bail out if zlib is not supported.
+	* lib/ld-lib.exp (run_dump_test): If as options include
+	--compress-debug-sections and zlib is not available, report
+	the test as unsupported.
+
+2012-11-27  Roland McGrath  <mcgrathr@google.com>
+
 	* ld-elf/flags1.d: Add *-*-nacl* to xfail list.
 	* ld-elf/orphan-region.d: Likewise.
 
